# arcade-imgui

./: .gitignore  DEV.md  LICENSE  README.md  demo.py  example_arcade.py  example_arcade_input.py  imgui.ini  pyproject.toml  requirements.txt  test_arcade.py  test_arcade_input.py  test_pyglet.py  test_pyglet_input.py
arcade_imgui/: __init__.py
arcade_imgui/integrations/: arcade.py
arcade_imgui_demo/: __init__.py  page.py
arcade_imgui_demo/pages/: bullet.py  button.py  checkbox.py  child.py  circle.py  cloud.py  collapsingheader.py  coloredit.py  colors.py  columns.py  combo.py  demo.py  dnd.py  dragfloat.py  dragint.py  dummy.py  empty.py  fireworks.py  font.py  fontimage.py  group.py  image.py  imagebutton.py  imagedraw.py  indent.py  index.py  input.py  line.py  listbox.py  mainmenu.py  nodes.py  overlay.py  plot.py  popup.py  rect.py  sameline.py  selectable.py  separator.py  ship.py  slider.py  (+9 more)
arcade_imgui_demo/pages/nodes/: __init__.py  wire.py
arcade_imgui_demo/pages/nodes/nodes/: meter.py  sin.py
arcadeimgui/integrations/: arcade.py
examples/: basic.py  bullet.py  bullettext.py  button.py  checkbox.py  checkboxflags.py  child.py  circle.py  collapsingheader.py  colorbutton.py  coloredit3.py  coloredit4.py  colors.py  columns.py  combo.py  demo.py  dnd.py  dragfloat.py  dragfloat2.py  dragfloat3.py  dragfloat4.py  dragint.py  dragint2.py  dragint3.py  dragint4.py  dummy.py  empty.py  font.py  fontimage.py  group.py  image.py  imagebutton.py  imagedraw.py  indent.py  input.py  line.py  mainmenu.py  overlay.py  overlaydraw.py  popup.py  (+9 more)
imdemo/: pyproject.toml
imdemo/examples/: bullet.py  bullettext.py  button.py  checkbox.py  checkboxflags.py  child.py  circle.py  collapsingheader.py  colorbutton.py  coloredit3.py  coloredit4.py  colors.py  columns.py  combo.py  demo.py  dnd.py  dragfloat.py  dragfloat2.py  dragfloat3.py  dragfloat4.py  dragint.py  dragint2.py  dragint3.py  dragint4.py  dummy.py  empty.py  font.py  fontimage.py  framebuffer.py  group.py  image.py  imagebutton.py  imagedraw.py  indent.py  input.py  line.py  mainmenu.py  overlay.py  popup.py  popupcontextview.py  (+8 more)
imdemo/imdemo/: __init__.py  __main__.py  page.py  particle.py
imdemo/imdemo/pages/: bullet.py  button.py  checkbox.py  child.py  circle.py  cloud.py  collapsingheader.py  coloredit.py  colors.py  columns.py  combo.py  demo.py  dnd.py  dragfloat.py  dragint.py  dummy.py  fireworks.py  font.py  fontimage.py  group.py  image.py  imagebutton.py  imagedraw.py  indent.py  index.py  input.py  line.py  listbox.py  mouse.py  overlay.py  plot.py  popup.py  rect.py  sameline.py  selectable.py  separator.py  ship.py  slider.py  spacing.py  sparks.py  (+7 more)
imdemo/imdemo/pages/nodes/: __init__.py  pin.py
imdemo/imdemo/pages/nodes/nodes/: meter.py  sin.py
imdemo/tests/: test_imdemo.py
imflo/: pyproject.toml
imflo/imflo/: __init__.py  __main__.py  dnd.py  node.py  page.py  particle.py  pin.py  wire.py
imflo/imflo/nodes/: sin.py
imflo/imflo/pages/basic/: __init__.py  led.py  meter.py  sin.py  volume.py
imflo/imflo/pages/connect/: __init__.py  meter.py  sin.py  volume.py
imflo/imflo/pages/sine/: __init__.py  scope.py
imflo/imflo/pages/sparks/: __init__.py  scope.py  sine.py  spark.py
imflo/tests/: test_imflo.py
