[tool.poetry]
name = "arcade-imgui"
version = "0.2.0"
description = "IMGUI integration for arcade"
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

readme = "README.md"
homepage="https://github.com/kfields/arcade-imgui"
repository="https://github.com/kfields/arcade-imgui"
documentation="https://github.com/kfields/arcade-imgui"
keywords = ["arcade", "game", "gui"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.5.7"
imgui = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
