[tool.poetry]
name = "imflo"
version = "0.2.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
arcade-imgui = {path = ".."}
rx = "^3.2.0"
scipy = "^1.7.1"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
