[tool.poetry]
name = "imflo"
version = "0.5.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
arcade-imgui = {path = "..", develop = true}
rx = "^3.2.0"
scipy = "^1.10.0"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
